1531 - add endpoint to fetch list of prisons
